--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         android:id="@+id/button_count"
         android:layout_width="88dp"
         android:layout_height="48dp"
-        android:background="@color/colorPrimary"
+        android:background="#76FF03"
         android:onClick="countUp"
         android:text="@string/count"
         android:textColor="@android:color/white"
@@ -53,6 +53,7 @@
         android:gravity="center_vertical"
         android:text="@string/_0"
         android:textAlignment="center"
+        android:textColor="#023CCD"
         android:textSize="160sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,7 +69,7 @@
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:background="@android:color/darker_gray"
-        android:text="zero"
+        android:text="@string/zero"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
